roadrecon gui: service principal URLs column
