# roadrecon/frontend-react/openapi.json
@@ -8097,17 +8097,6 @@
       "type": "boolean",
       "title": "Hascustomowner"
      },
-     "appOwnerTenantId": {
-      "anyOf": [
-       {
-        "type": "string"
-       },
-       {
-        "type": "null"
-       }
-      ],
-      "title": "Appownertenantid"
-     },
      "homepage": {
       "anyOf": [
        {
@@ -8119,12 +8108,34 @@
       ],
       "title": "Homepage"
      },
+     "logoutUrl": {
+      "anyOf": [
+       {
+        "type": "string"
+       },
+       {
+        "type": "null"
+       }
+      ],
+      "title": "Logouturl"
+     },
      "replyUrls": {
       "items": {
        "type": "string"
       },
       "type": "array",
       "title": "Replyurls"
+     },
+     "appOwnerTenantId": {
+      "anyOf": [
+       {
+        "type": "string"
+       },
+       {
+        "type": "null"
+       }
+      ],
+      "title": "Appownertenantid"
      },
      "servicePrincipalNames": {
       "items": {
@@ -8195,9 +8206,10 @@
      "appRoleCount",
      "oauth2PermissionCount",
      "hasCustomOwner",
-     "appOwnerTenantId",
      "homepage",
+     "logoutUrl",
      "replyUrls",
+     "appOwnerTenantId",
      "servicePrincipalNames",
      "application",
      "credentials",
@@ -8290,6 +8302,35 @@
      "hasCustomOwner": {
       "type": "boolean",
       "title": "Hascustomowner"
+     },
+     "homepage": {
+      "anyOf": [
+       {
+        "type": "string"
+       },
+       {
+        "type": "null"
+       }
+      ],
+      "title": "Homepage"
+     },
+     "logoutUrl": {
+      "anyOf": [
+       {
+        "type": "string"
+       },
+       {
+        "type": "null"
+       }
+      ],
+      "title": "Logouturl"
+     },
+     "replyUrls": {
+      "items": {
+       "type": "string"
+      },
+      "type": "array",
+      "title": "Replyurls"
      }
     },
     "type": "object",
@@ -8306,7 +8347,10 @@
      "keyCount",
      "appRoleCount",
      "oauth2PermissionCount",
-     "hasCustomOwner"
+     "hasCustomOwner",
+     "homepage",
+     "logoutUrl",
+     "replyUrls"
     ],
     "title": "ServicePrincipalRow"
    },
